-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6.2
-
None
-
-
50e79d32d (dev), a8379cd86 (6.7)
qttools/designer fails to build when compiled with unity build enabled (cmake -DCMAKE_UNITY_BUILD):
FAILED: src/designer/src/components/lib/CMakeFiles/DesignerComponentsPrivate.dir/Unity/unity_0_cxx.cxx.o
/opt/rh/devtoolset-9/root/usr/bin/c++ -DDesignerComponentsPrivate_EXPORTS -DQDESIGNER_COMPONENTS_LIBRARY -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_DESIGNERCOMPONENTS_LIB -DQT_CORE_LIB -DQT_DEPRE
CATED_WARNINGS -DQT_DESIGNER_LIB -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NO_AS_CONST -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT
_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_OPENGLWIDGETS_LIB -DQT_OPENGL_LIB -DQT_STATICPLUGIN -DQT_UIPLUGIN_LIB -DQT_USE_QSTRI
NGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -DQT_WIDGETS_LIB -DQT_XML_LIB -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -Isrc/designer/src/components/lib/DesignerComponentsPrivate_autogen/include -Iinclude -I
include/QtDesignerComponents -Isrc/designer/src/components/lib -Isrc/designer/src/components/lib/. -Isrc/designer/src/components/lib/.. -Isrc/designer/src/components/lib/../../../../shared/tools/shared/qtpr
opertybrowser -Isrc/designer/src/components/lib/../../lib/components -Isrc/designer/src/components/lib/../../lib/extension -Isrc/designer/src/components/lib/../../lib/sdk -Isrc/designer/src/components/lib/.
./../lib/shared -Isrc/designer/src/components/lib/../buddyeditor -Isrc/designer/src/components/lib/../formeditor -Isrc/designer/src/components/lib/../objectinspector -Isrc/designer/src/components/lib/../pro
pertyeditor -Isrc/designer/src/components/lib/../signalsloteditor -Isrc/designer/src/components/lib/../tabordereditor -Isrc/designer/src/components/lib/../taskmenu -Isrc/designer/src/components/lib/../widge
tbox -Iinclude/QtDesignerComponents/6.6.1 -Iinclude/QtDesignerComponents/6.6.1/QtDesignerComponents -Isrc/designer/src/components/lib/../../../../shared/findwidget -Isrc/designer/src/components/lib/../../..
/../shared/qtgradienteditor -Isrc/designer/src/components/lib/../../../../shared/qtpropertybrowser -Isrc/designer/src/lib -Iinclude/QtDesigner/6.6.1 -Iinclude/QtDesigner/6.6.1/QtDesigner -Iinclude/QtDesigne
r -Iinclude/QtUiPlugin -Isrc/uiplugin -isystem /usr/local/include/QtCore -isystem /usr/local/mkspecs/linux-g++ -isystem /usr/local/include/QtCore/6.6.1 -isystem /usr/local/include/QtCore/6.6.1/QtCore -isyst
em /usr/local/include/QtGui/6.6.1 -isystem /usr/local/include/QtGui/6.6.1/QtGui -isystem /usr/local/include/QtGui -isystem /usr/local/include/QtWidgets/6.6.1 -isystem /usr/local/include/QtWidgets/6.6.1/QtWi
dgets -isystem /usr/local/include/QtWidgets -isystem /usr/local/include/QtXml -isystem /usr/local/include/QtOpenGLWidgets -isystem /usr/local/include/QtOpenGL -DNDEBUG -O2 -fPIC -fvisibility=hidden -fvisibi
lity-inlines-hidden -Wall -Wextra -fno-exceptions -fPIC -pthread -Wsuggest-override -std=c++17 -Winvalid-pch -include /usr/local/src/qttools-everywhere-src-6.6.1/src/designer/src/components/lib/CMakeFiles
/DesignerComponentsPrivate.dir/cmake_pch.hxx -MD -MT src/designer/src/components/lib/CMakeFiles/DesignerComponentsPrivate.dir/Unity/unity_0_cxx.cxx.o -MF src/designer/src/components/lib/CMakeFiles/DesignerC
omponentsPrivate.dir/Unity/unity_0_cxx.cxx.o.d -o src/designer/src/components/lib/CMakeFiles/DesignerComponentsPrivate.dir/Unity/unity_0_cxx.cxx.o -c src/designer/src/components/lib/CMakeFiles/DesignerCompo
nentsPrivate.dir/Unity/unity_0_cxx.cxx
In file included from src/designer/src/components/lib/CMakeFiles/DesignerComponentsPrivate.dir/Unity/unity_0_cxx.cxx:10:
/usr/local/src/qttools-everywhere-src-6.6.1/src/designer/src/components/formeditor/deviceprofiledialog.cpp: In constructor ‘qdesigner_internal::DeviceProfileDialog::DeviceProfileDialog(QDesignerDialogGuiInt
erface*, QWidget*)’:
/usr/local/src/qttools-everywhere-src-6.6.1/src/designer/src/components/formeditor/deviceprofiledialog.cpp:47:18: error: ‘DeviceProfileDialog’ in namespace ‘qdesigner_internal::Ui’ does not name a type
47 | m_ui(new Ui::DeviceProfileDialog),
perhaps deviceprofiledialog.cpp should be marked with SKIP_UNITY_BUILD_INCLUSION ?
it is fine if I reduce the batch size to 4 (default is 8), ideally I wanted to use 32
- relates to
-
QTBUG-115448 qttools -unity-build-batch-size 100000 fails
-
- Closed
-