Qt Designer: Potential fix for Unity builds

Fully qualify all classes in Ui namespaces.

Fixes: QTBUG-120751
Task-number: QTBUG-115448
Pick-to: 6.7
Change-Id: Ic85fc5604b237ba84c2e4a9c50f4b94cdbb3037c
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>