src/designer/src/components/formeditor/formwindowsettings.cpp
@@ -143,7 +143,7 @@ void FormWindowData::applyToFormWindow(FormWindowBase* fw) const
 
 FormWindowSettings::FormWindowSettings(QDesignerFormWindowInterface *parent) :
     QDialog(parent),
-    m_ui(new ::Ui::FormWindowSettings),
+    m_ui(new QT_PREPEND_NAMESPACE(Ui)::FormWindowSettings),
     m_formWindow(qobject_cast<FormWindowBase*>(parent)),
     m_oldData(new FormWindowData)
 {
