src/designer/src/components/formeditor/templateoptionspage.cpp
@@ -20,7 +20,7 @@ namespace qdesigner_internal {
 TemplateOptionsWidget::TemplateOptionsWidget(QDesignerFormEditorInterface *core, QWidget *parent) :
     QWidget(parent),
     m_core(core),
-    m_ui(new Ui::TemplateOptionsWidget)
+    m_ui(new QT_PREPEND_NAMESPACE(qdesigner_internal)::Ui::TemplateOptionsWidget)
 {
     m_ui->setupUi(this);
 
