src/designer/src/lib/shared/orderdialog.cpp
@@ -21,7 +21,7 @@ namespace qdesigner_internal {
 
 OrderDialog::OrderDialog(QWidget *parent) :
     QDialog(parent),
-    m_ui(new Ui::OrderDialog),
+    m_ui(new QT_PREPEND_NAMESPACE(qdesigner_internal)::Ui::OrderDialog),
     m_format(PageOrderFormat)
 {
     m_ui->setupUi(this);
